Feat: authcontext, localstorage,yupschema, logincomponent, axios,featuredhotels,fetch hotels and fixed some files
Added Authcontext
Added localstorage
Added yupshcema
Added axios
Added logincomponent to admin page
Added fetch featured hotels
And modified som files

--- a/holidaze-project/src/App.css
+++ b/holidaze-project/src/App.css
@@ -218,16 +218,26 @@ body {
 /*Featured title end*/
 
 /*Featured hotels*/
-.featured-center{
-    width: 90vw;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
-    grid-row-gap: 2rem;
-    grid-column-gap: 50px;
-    text-align: center;
-    
-    
+
+
+.hotel-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2em;
+}
+.card {
+  text-align: center;
+  padding: 10px;
+  width: 300px;
+  border-radius: 5px;
+  padding: 1em;
+  box-shadow: var(--darkShadow);
+ 
+}
+.hotel-container img {
+  height: 100px;
+  width: auto;
 }
 
 
@@ -287,6 +297,23 @@ body {
   .contactHero h1{
     color: var(--whiteColor);
   }
+
+  .login-box {
+    margin: 0 auto;
+    text-align: center;
+    padding: 4rem;
+    border-radius: 2px;
+  
+    max-width: 300px;
+  }
+  
+  .login-box span{
+    color: var(--whiteColor);
+  
+  }
+  
+  
+  
 
   /*footer*/
 
