--- a/holidaze-project/src/sass/main.scss
+++ b/holidaze-project/src/sass/main.scss
@@ -1,174 +1,145 @@
-
-
-
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --primeColor: #818479 ;
-    --seccondColor: #B5CBB7;
-    --thirdColor: #D2E4C4;
-    --fourthColor: #E4E9B2;
-    --fifthColor: #E7E08B;
-    --blueColor: cadetblue;
-    --whiteColor: #ffff;
-    --blackColor: rgb(0, 0, 0);
-    --lightGrey:rgb(241, 241, 241)f;
-    --mainTransition: all 0.3s linear;
-    --mainSpacing: 3px;
-    --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
-    --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
-
-
-
+  --primeColor: #818479;
+  --seccondColor: #b5cbb7;
+  --thirdColor: #d2e4c4;
+  --fourthColor: #e4e9b2;
+  --fifthColor: #e7e08b;
+  --blueColor: cadetblue;
+  --whiteColor: #ffff;
+  --blackColor: rgb(0, 0, 0);
+  --lightGrey: rgb(241, 241, 241) f;
+  --mainTransition: all 0.3s linear;
+  --mainSpacing: 3px;
+  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
+  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
 /* globals */
 body {
-    padding-top: 66px;
-    color: var(--blackColor);
-    background: var(--whiteColor);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 1.4;
-  }
-  h1 {
-    font-size: 3em;
-    line-height: 1;
-    margin-bottom: 0.5em;
-  }
-  h2 {
-    font-size: 2em;
-    margin-bottom: 0.75em;
-  }
-  h3 {
-    font-size: 1.5em;
-    line-height: 1;
-    margin-bottom: 1em;
-  }
-  h4 {
-    font-size: 1.2em;
-    line-height: 1.25;
-    margin-bottom: 1.25em;
-   
-  }
- 
-  .button-prime {
-    display: inline-block;
-    text-decoration: none;
-    letter-spacing: var(--mainSpacing);
-    color: var(--blackColor);
-    background: var(--thirdColor);
-    padding: 0.4rem 0.9rem;
-    border: 3px solid var(--thirdColor);
-    transition: var(--mainTransition);
-    text-transform: uppercase;
-    cursor: pointer;
-    border-radius: 10px;
-  }
-  .button-prime:hover {
-    background: transparent;
-    color: var(--thirdColor);
-  }
-  
-  .button-prime a{
-      text-decoration: none;
-      color: black;
-  }
+  padding-top: 66px;
+  color: var(--blackColor);
+  background: var(--whiteColor);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.4;
+}
+h1 {
+  font-size: 3em;
+  line-height: 1;
+  margin-bottom: 0.5em;
+}
+h2 {
+  font-size: 2em;
+  margin-bottom: 0.75em;
+}
+h3 {
+  font-size: 1.5em;
+  line-height: 1;
+  margin-bottom: 1em;
+}
+h4 {
+  font-size: 1.2em;
+  line-height: 1.25;
+  margin-bottom: 1.25em;
+}
 
-  
-  
-  /* end of global */
+.button-prime {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: var(--blackColor);
+  background: var(--thirdColor);
+  padding: 0.4rem 0.9rem;
+  border: 3px solid var(--thirdColor);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.button-prime:hover {
+  background: transparent;
+  color: var(--thirdColor);
+}
 
+.button-prime a {
+  text-decoration: none;
+  color: black;
+}
 
-  /* Nav*/
-  .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 0.75rem 2rem;
-    background: var(--lightGrey);
-    z-index: 1;
-   
-   
-  }
+/* end of global */
 
-  .nav-header {
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    
-  
-  }
-  .nav-button {
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    outline: none;
-  }
-  .nav-toggle{
-    font-size: 1.5rem;
-    color: var(--primeColor);
-    
-  }
+/* Nav*/
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.75rem 2rem;
+  background: var(--lightGrey);
+  z-index: 1;
+}
 
-  .nav-links {
-    height: 0;
-    overflow: hidden;
-    transition: var(--mainTransition);
-    list-style-type: none;
-    margin: 12px;
-    background-color: var(--fourthColor);
-   
-    
-   
-    
-  
-    
-  }
-  .nav-links a {
-    display: block;
-    text-decoration: none;
-    padding: 1rem 0;
-    color: var(--blackColor);
-    transition: var(--mainTransition);
-    text-align: center;
-    font-size: 1rem;
-    font-weight: 400;
-    letter-spacing: var(--mainSpacing);
-  }
-  .nav-links a:hover {
-    color: var(--blueColor);
-  }
-  
-  .vissible-nav {
-    height: 280px;
-    width: auto;
-   
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+}
+.nav-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+.nav-toggle {
+  font-size: 1.5rem;
+  color: var(--primeColor);
+}
 
-  }
+.nav-links {
+  height: 0;
+  overflow: hidden;
+  transition: var(--mainTransition);
+  list-style-type: none;
+  margin: 12px;
+  background-color: var(--fourthColor);
+}
+.nav-links a {
+  display: block;
+  text-decoration: none;
+  padding: 1rem 0;
+  color: var(--blackColor);
+  transition: var(--mainTransition);
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: var(--mainSpacing);
+}
+.nav-links a:hover {
+  color: var(--blueColor);
+}
 
-  img{
-      height: 50px;
-      
-      
-  }
+.vissible-nav {
+  height: 280px;
+  width: auto;
+}
 
-  nav a{
-      text-decoration: none;
-      color: var(--whiteColor);
-  
+img {
+  height: 50px;
+}
 
-  }
+nav a {
+  text-decoration: none;
+  color: var(--whiteColor);
+}
 
- 
-  /*Nav end*/
+/*Nav end*/
 
-  /* Hero */
+/* Hero */
 .bannerHero,
 .hotelsHero {
   min-height: calc(80vh - 66px);
@@ -182,20 +153,19 @@ body {
   background-image: url("../media/bryggen2.jpg");
   min-height: 80vh;
 }
-.contactHero{
-    min-height: calc(80vh - 66px);
+.contactHero {
+  min-height: calc(80vh - 66px);
   background: url("../media/contact.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 /* End Hero */
 
 /*banner*/
 
-.banner{
+.banner {
   display: inline-block;
   background: rgba(75, 75, 75, 0.5);
   color: var(--mainWhite);
@@ -215,45 +185,33 @@ body {
   margin-bottom: 2rem;
 }
 
-
-
-
-
 /*banner end*/
-
 
 /*Login*/
 
-.login-input{
-   
-
-	width: 100%;
-	padding: 10px;
-    border-radius: 10px;
-    border: none;
+.login-input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
 }
 
 /*Login end*/
 
-
-
-
 /*Featured title*/
-.featured-title{
-    text-align: center;
-    margin-top: 2rem;
-
+.featured-title {
+  text-align: center;
+  margin-top: 2rem;
 }
-.featured-title h4{
-    font-size: 2rem;
-    letter-spacing: var(--mainSpacing);
-    text-transform: capitalize;
-    margin-bottom: 1rem;
+.featured-title h4 {
+  font-size: 2rem;
+  letter-spacing: var(--mainSpacing);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
 }
 /*Featured title end*/
 
 /*Featured hotels*/
-
 
 .hotel-container {
   display: flex;
@@ -269,274 +227,289 @@ body {
   padding: 1em;
   box-shadow: var(--darkShadow);
   background-color: var(--primeColor);
- 
 }
 .hotel-container img {
   height: 100px;
   width: auto;
 }
 
-
-
 /*Featured hotel end*/
 
 /*hotel details*/
 
 .hotel-container {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 6em 6em 2.5em 6em;
-    gap: 6em;
-  }
-  .hotel-image {
-    width: 300px;
-    height: auto;
-  }
-  .name{
-    text-align: left;
-  }
-  .back {
-    text-align: center;
-    margin-bottom: 2em
-  }
+  display: flex;
+  justify-content: space-evenly;
+  padding: 6em 6em 2.5em 6em;
+  gap: 6em;
+}
+.hotel-image {
+  width: 300px;
+  height: auto;
+}
+.name {
+  text-align: left;
+}
+.back {
+  text-align: center;
+  margin-bottom: 2em;
+}
 
 /*hotel details*/
 
-
-
 /*Info title*/
 
-.info-title{
-    text-align: center;
-    margin-top: 2rem;
+.info-title {
+  text-align: center;
+  margin-top: 2rem;
 }
 
-.info-title h4{
-    font-size: 2rem;
-    letter-spacing: var(--mainSpacing);
-    text-transform: capitalize;
-    margin-bottom: 1rem;
+.info-title h4 {
+  font-size: 2rem;
+  letter-spacing: var(--mainSpacing);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
 }
 
 /*info section*/
 
 .info {
-    padding: 5rem 0;
-    cursor: pointer;
-    border-radius: 10px;
+  padding: 5rem 0;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
-.info{
-    background-color: var(--thirdColor);
-    text-align: center;
+.info {
+  background-color: var(--thirdColor);
+  text-align: center;
 }
-.info-center{
-    width: 90vw;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
-    grid-row-gap: 2rem;
-    grid-column-gap: 50px;
+.info-center {
+  width: 90vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+  grid-row-gap: 2rem;
+  grid-column-gap: 50px;
+}
+.info p{
+    color: black;
 }
 
 .info span {
-    display: inline-block;
-    color:var(--blueColor);
-    font-size: 2.5rem;
-    margin-bottom: 1.5rem;
-  }
-
-
- 
-
-  .hotelsHero h1{
-    color:var(--whiteColor);
-  }
-
-  .contactHero h1{
-    color: var(--whiteColor);
-  }
-
-  .login-box {
-    margin: 0 auto;
-    text-align: center;
-    padding: 4rem;
-    border-radius: 2px;
-  
-    max-width: 300px;
-  }
-  
-  .login-box span{
-    color: var(--whiteColor);
-  
-  }
-  
-  
-  
-
-  /*footer*/
-
-.footer-container{
-    max-width: 1170px;
-    margin: auto;
-    
-    
-
-
-}
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    
+  display: inline-block;
+  color: var(--blueColor);
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 
-.footer{
-    background-color:var(--seccondColor);
-    padding: 70px 0;
-    padding-left: 80px;
-    
-  
-
-    
-    
-  
+.hotelsHero h1 {
+  color: var(--whiteColor);
 }
 
-.footer-col{
-    width: 25%;
-    padding: 0 15px;
-   
-   
-    
+.contactHero h1 {
+  color: var(--whiteColor);
 }
 
-.footer-col h4{
-    font-size: 18px;
-    color: var(--blueColor);
-    text-transform: capitalize;
-    margin-bottom: 35px;
-    position: relative;
-   
-    
+.login-box {
+  margin: 0 auto;
+  text-align: center;
+  padding: 4rem;
+  border-radius: 2px;
+
+  max-width: 300px;
 }
 
-.footer-col h4::before{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -10px;
+.login-box span {
+  color: var(--whiteColor);
+}
 
-    height: 2px;
+/*contact*/
+.main-content {
+    width: 100%;
+    border-radius: 4px;
     box-sizing: border-box;
-    width: 50px;
-    
-    
-}
-.footer-col ul{
-    list-style: none;
-}
 
-.footer-col ul li:not(:last-child){
-    margin-bottom: 10px;
-    
-    
+  
+  }
+
+.main-content h2,
+p,
+span {
+  text-align: center;
+  color:  var(--thirdColor);
 }
 
-.footer-col ul li a{
-    font-size: 16px;
-    text-transform: capitalize;
-    color: var(--whiteColor);
-    text-decoration: none;
-    font-weight: 300;
-    display: block;
-    transition: all 0.3s ease;
-    list-style: none;
+input[type="text"] {
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
 }
-.footer-col ul li a:hover{
-
-    padding-left: 10px;
-    
+input[type="number"] {
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  
 }
-
-.footer-col .social-links a{
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    margin: 0 10px 10px 0;
-    text-align: center;
-    line-height: 40px;
-    color: rgb(230, 223, 223);
-    transition: all 0.5s ease;
-}
-
-.footer-col .social-links a:hover{
-   color: var(--fifthColor);
-
-}
-
-
-.footer .social-links{
-    
-   color: var(--whiteColor);
-   cursor: pointer;
+input[type="email"] {
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
  
-   
-
-
+}
+input[type="number"] {
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+ 
 }
 
- /*Footer end*/
 
 
 
 
- /*Responsive*/
+
+/*footer*/
+
+.footer-container {
+  max-width: 1170px;
+  margin: auto;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer {
+  background-color: var(--seccondColor);
+  padding: 70px 0;
+  padding-left: 80px;
+}
+
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
+}
+
+.footer-col h4 {
+  font-size: 18px;
+  color: var(--blueColor);
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  position: relative;
+}
+
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+.footer-col ul {
+  list-style: none;
+}
+
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: var(--whiteColor);
+  text-decoration: none;
+  font-weight: 300;
+  display: block;
+  transition: all 0.3s ease;
+  list-style: none;
+}
+.footer-col ul li a:hover {
+  padding-left: 10px;
+}
+
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  color: rgb(230, 223, 223);
+  transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover {
+  color: var(--fifthColor);
+}
+
+.footer .social-links {
+  color: var(--whiteColor);
+  cursor: pointer;
+}
+
+/*Footer end*/
+
+/*Responsive*/
 
 @media screen and (min-width: 576px) {
-    .banner {
-      padding: 2rem 3rem;
-    }
-    .banner h1 {
-      font-size: 3rem;
-    }
-    
-    
+  .banner {
+    padding: 2rem 3rem;
   }
+  .banner h1 {
+    font-size: 3rem;
+  }
+}
 
 @media screen and (min-width: 768px) {
-    .nav-button {
-      display: none;
-    }
-    .nav-center {
-      max-width: 1170px;
-      margin: 0 auto;
-      display: flex;
-    }
-    .nav-links {
-      height: auto;
-      display: flex;
-      margin: auto
-    }
-    .nav-links a {
-      margin: 0 1rem;
-      padding: 0.5rem 0;
-    }
-   
+  .nav-button {
+    display: none;
   }
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+  }
+  .nav-links {
+    height: auto;
+    display: flex;
+    margin: auto;
+  }
+  .nav-links a {
+    margin: 0 1rem;
+    padding: 0.5rem 0;
+  }
+}
 
-  
-  @media screen and (min-width: 992px) {
-    .banner {
-      padding: 2rem 6rem;
-    }
-    .banner h1 {
-      font-size: 4rem;
-    }
-    .info-center {
-        width: 95vw;
-        max-width: 1170px;
-      }
-    
+@media screen and (min-width: 992px) {
+  .banner {
+    padding: 2rem 6rem;
   }
-  
-  /*Responsive end*/
+  .banner h1 {
+    font-size: 4rem;
+  }
+  .info-center {
+    width: 95vw;
+    max-width: 1170px;
+  }
+}
+
+/*Responsive end*/
