--- a/holidaze-project/src/sass/main.scss
+++ b/holidaze-project/src/sass/main.scss
@@ -129,7 +129,8 @@ h4 {
   letter-spacing: var(--mainSpacing);
 }
 .nav-link:hover{
-  color: var(--blueColor);
+  background-color: var(--blueColor);
+  color: white;
 
 }
 
@@ -226,6 +227,8 @@ nav a {
   justify-content: center;
 }
 
+
+
 /* End Hero */
 
 /*banner*/
@@ -302,16 +305,18 @@ nav a {
 
 /*hotel details*/
 
+.hotel-banner img{
+  width: 10%;
+  height: auto;
+  
+}
 .hotel-container {
   display: flex;
   justify-content: space-evenly;
   padding: 6em 6em 2.5em 6em;
   gap: 6em;
 }
-.hotel-image {
-  width: 300px;
-  height: auto;
-}
+
 .name {
   text-align: left;
 }
@@ -320,7 +325,45 @@ nav a {
   margin-bottom: 2em;
 }
 
+.detail-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+  list-style: none;
+}
+
+.detail-container li{
+  list-style: none;
+  
+}
+
+.detail-container a{
+  text-align: center;
+  margin-bottom: 2em;
+  text-decoration: none;
+  
+}
 /*hotel details*/
+
+/*booking*/
+.search-bar{
+ 
+  box-shadow: none;
+  font-size: 1em;
+  padding: .9rem;
+  width: 50%;
+  margin: auto;
+
+}
+
+
+
+
+
+
+
+/*booking end*/
 
 /*Info title*/
 
@@ -389,19 +432,39 @@ nav a {
 }
 
 /*contact*/
-.main-content {
-    width: 100%;
-    border-radius: 4px;
-    box-sizing: border-box;
+.contact-title{
+  color: var(--fourthColor);
+}
 
-  
-  }
+.inputN{
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
 
-.main-content h2,
-p,
-span {
+.inputE{
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+
+.inputMessage{
+  width: 100%;
+  padding: 50px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 15px;
+  margin-bottom: 16px;
   text-align: center;
-  color:  var(--thirdColor);
 }
 
 input[type="text"] {
@@ -413,37 +476,55 @@ input[type="text"] {
   margin-top: 6px;
   margin-bottom: 16px;
 }
-input[type="number"] {
-  width: 100%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  
-}
-input[type="email"] {
-  width: 100%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
- 
-}
-input[type="number"] {
-  width: 100%;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
- 
+
+.contact-container span{
+  color: var(--fifthColor);
 }
 
+
+/*admin*/
+
+.btn-logout{
+
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: var(--blackColor);
+  background: var(--thirdColor);
+  padding: 0.4rem 0.9rem;
+  border: 3px solid var(--thirdColor);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: var(--blueColor);
+}
+
+.btn-logout:hover{
+
+  background-color: var(--blueColor);
+}
+
+.message-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2em;
+}
+
+.message-container .card {
+  width: 20%;
+  height: auto;
+
+}
+
+
+
+
+
+
+
+/*admin end*/
 
 
 
