--- a/holidaze-project/src/sass/main.scss
+++ b/holidaze-project/src/sass/main.scss
@@ -350,14 +350,12 @@ nav a {
 .cardhotel-wrapper {
   max-width: 1100px;
   margin: 0 auto;
-  
 }
 .cardhotel-wrapper img {
   width: 100%;
   height: auto;
   display: block;
 }
-
 
 .product-content {
   padding: 2rem 1rem;
@@ -376,7 +374,7 @@ nav a {
 }
 .product-rating span {
   font-weight: 600;
-  color: var(--primeColor)
+  color: var(--primeColor);
 }
 
 .info-grid ul {
@@ -422,37 +420,35 @@ nav a {
 .product-detail ul li span {
   font-weight: 400;
 }
-.img-display{
+.img-display {
   overflow: hidden;
 }
-.img-showcase{
+.img-showcase {
   display: flex;
   width: 100%;
   transition: all 0.5s ease;
 }
-.img-showcase img{
+.img-showcase img {
   min-width: 100%;
 }
-.img-select{
+.img-select {
   display: flex;
 }
-.img-item{
+.img-item {
   margin: 0.3rem;
 }
 .img-item:nth-child(1),
 .img-item:nth-child(2),
-.img-item:nth-child(3){
+.img-item:nth-child(3) {
   margin-right: 0;
 }
-.img-item:hover{
+.img-item:hover {
   opacity: 0.8;
 }
 
 /*hotel details*/
 
 /*booking*/
-
-
 
 .search-bar {
   box-shadow: none;
@@ -574,7 +570,7 @@ input {
 }
 
 /*admin*/
-.admin-alert{
+.admin-alert {
   color: var(--whiteColor);
 }
 .message-container {
@@ -598,7 +594,6 @@ input {
   cursor: pointer;
   border-radius: 10px;
   background-color: var(--blueColor);
-  
 }
 
 .btn-logout:hover {
@@ -676,8 +671,6 @@ button:hover {
 .accordion {
   background-color: var(--seccondColor);
 }
-
-
 
 /*admin end*/
 
@@ -798,7 +791,6 @@ button:hover {
   .banner h1 {
     font-size: 3rem;
   }
-  
 }
 
 @media screen and (min-width: 768px) {
@@ -840,7 +832,7 @@ button:hover {
   .banner h1 {
     font-size: 4rem;
   }
-  
+
   .info-center {
     width: 95vw;
     max-width: 1170px;
